Switch to Squid (Magik Tools) instead of own ANTLR4 grammar